Edit Home Countries

--- a/src/pages/home/home.html
+++ b/src/pages/home/home.html
@@ -1,14 +1,22 @@
 <ion-header>
   <ion-navbar>
     <ion-title>
-       Lista Paises
+      Lista Paises
     </ion-title>
   </ion-navbar>
 </ion-header>
 
 <ion-content padding>
-  The world is your oyster.
-  <p>
-    If you get lost, the <a href="http://ionicframework.com/docs/v2">docs</a> will be your guide.
-  </p>
+  <ion-searchbar [(ngModel)]="pesquisar" [formControl]="pesquisarControl">
+  </ion-searchbar>
+
+  <ion-list>
+    <ion-item *ngFor="let c of listcountries"> 
+      <ion-avatar item-left>
+        <img src="{{c.flag}}">
+      </ion-avatar>
+      <h2>{{c.name}}</h2>
+      <p>Capital: {{c.capital}}, Region: {{c.region}}</p>
+    </ion-item>
+  </ion-list>
 </ion-content>
